# mas

./: .gitignore  README.md  pyproject.toml
examples/: simple_worker.py
mas/: __init__.py
mas/client/: cli-client.py  telegram-client.py
mas/common/: __init__.py
mas/daemon/: __init__.py  __main__.py  service.py  worker.py
mas/examples/: simple_worker.py
mas/lib/: __init__.py  client.py  worker.py
